<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".area">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/Nombre"
            android:text="Mi nombre es: "
            android:textSize="25sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center"
            tools:ignore="MissingConstraints">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtBase"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingBottom="10sp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAltura"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingBottom="10sp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtArea"
                android:minHeight="50dp"
                android:paddingTop="25sp"
                android:textSize="20sp"
                android:paddingBottom="25sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perimetro"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPerimetro"
                android:minHeight="50dp"
                android:paddingTop="25sp"
                android:textSize="20sp"
                android:paddingBottom="25sp">
            </TextView>
        </LinearLayout>
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/btnCalcular">
        </Button>

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/btnLimpiar"></Button>

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCerrar">
    </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>